feat: update blog description

--- a/_config.yml
+++ b/_config.yml
@@ -20,9 +20,7 @@
 
 title: PONG2KOT
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  A personal blog's Pongkot Sae-li. Its contain content about software development, common life and notes.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 show_excerpts: true
